[package]
name = "parser300b"
version = "0.0.1"
edition = "2021"

[lib]
name         = "parser300b"
crate-type   = [ "rlib", "cdylib" ]

[dependencies]
colored = "2.0.0"
trim-margin = "0.1.0"
jemallocator = "0.5"
jemalloc-sys = { version = "0.5", features = ["stats"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "sh_benchmark"
harness = false